<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uinsgd.mcampus.TentangActivity"
    tools:showIn="@layout/activity_tentang">
    <TextView
        android:id="@+id/tentang_judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_judul"
        android:textSize="25sp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textColor="#000000"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tentang_konten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="20sp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textColor="#000000"
        android:layout_below="@id/tentang_judul"/>
    <TextView
        android:id="@+id/feature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_feature"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_below="@id/tentang_konten"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin" />
    <TextView
        android:id="@+id/bullet1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bullet1"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_below="@id/feature"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin" />
    <TextView
        android:id="@+id/bullet2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bullet2"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_below="@id/bullet1"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin" />
    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="20sp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textColor="#000000"
        android:layout_below="@id/bullet2"/>
</RelativeLayout>
