<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_tugas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
        <TextView
            android:id="@+id/daftar_matkul_tugas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_matkul_judul"
            android:textSize="25sp"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/daftar_jenis_tugas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis_tugas_judul"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_below="@id/daftar_matkul_tugas"/>

        <TextView
            android:id="@+id/daftar_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadline_judul"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_below="@id/daftar_jenis_tugas"/>
        <ImageButton
            android:id="@+id/image_button_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more"
            android:background="@null"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/daftar_jenis_tugas"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
</android.support.v7.widget.CardView>